# advent-of-code-2017

./: .gitignore  AOC2017-Challenge-Day01.html  AOC2017-Challenge-Day02.html  AOC2017-Challenge-Day03.html  AOC2017-Challenge-Day04.html  AOC2017-Challenge-Day05.html  AOC2017-Challenge-Day06.html  AOC2017-Challenge-Day07.html  AOC2017-Challenge-Day08.html  AOC2017-Challenge-Day09.html  AOC2017-Challenge-Day10.html  AOC2017-Challenge-Day11.html  AOC2017-Challenge-Day12.html  AOC2017-Challenge-Day13.html  AOC2017-Challenge-Day14.html  AOC2017-Challenge-Day15.html  AOC2017-Challenge-Day16.html  AOC2017-Challenge-Day17.html  AOC2017-Challenge-Day18.html  AOC2017-Challenge-Day19.html  AOC2017-Challenge-Day20.html  AOC2017-Challenge-Day21.html  AOC2017-Challenge-Day22.html  AOC2017-Challenge-Day23.html  AOC2017-Challenge-Day24.html  AOC2017-Challenge-Day25.html  AOC2017-Discover.html  AOC2017-Types.html  AOC2017-Util-Accum.html  AOC2017-Util-Disjoints.html  AOC2017-Util.html  AOC2017.html  README.md  aoc2017.cabal  aoc2017.haddock  aoc2017.txt  doc-index.html  index.html  package.yaml  reflections.md  (+1 more)
app/: Main.hs
scratch/: 23-verbose.txt  23.txt
src/: AOC2017.Challenge.Day01.html  AOC2017.Challenge.Day02.html  AOC2017.Challenge.Day03.html  AOC2017.Challenge.Day04.html  AOC2017.Challenge.Day05.html  AOC2017.Challenge.Day06.html  AOC2017.Challenge.Day07.html  AOC2017.Challenge.Day08.html  AOC2017.Challenge.Day09.html  AOC2017.Challenge.Day10.html  AOC2017.Challenge.Day11.html  AOC2017.Challenge.Day12.html  AOC2017.Challenge.Day13.html  AOC2017.Challenge.Day14.html  AOC2017.Challenge.Day15.html  AOC2017.Challenge.Day16.html  AOC2017.Challenge.Day17.html  AOC2017.Challenge.Day18.html  AOC2017.Challenge.Day19.html  AOC2017.Challenge.Day20.html  AOC2017.Challenge.Day21.html  AOC2017.Challenge.Day22.html  AOC2017.Challenge.Day23.html  AOC2017.Challenge.Day24.html  AOC2017.Challenge.Day25.html  (+8 more)
(+60 files in other folders)
