name:                aoc2017
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/mstksg/aoc2017#readme
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/mstksg/aoc2017#readme>

library
  hs-source-dirs:      src
  exposed-modules:     AOC2017
                       AOC2017.Types
  other-modules:       AOC2017.Day01
                       AOC2017.Day02
                       AOC2017.Day03
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.10.2
                     , transformers
  default-language:    Haskell2010
  ghc-options:         -Wall

executable aoc2017
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , aoc2017
                     , containers
                     , filepath
  default-language:    Haskell2010

test-suite aoc2017-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , aoc2017
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/aoc2017
